installation-guide (2009xxxx) UNRELEASED; urgency=low

  * Switch over from Lenny to Squeeze. Current kernel is 2.6.29.
  * Change the Debian designation for the ARM architecture from arm to armel.
    The internal 'arch-spec' and file naming convention remains "arm" in order
    to avoid unnecessary changes and work for translators.
  * Mention that TERM= can be passed as boot parameter to set the terminal type
    for serial console installs. Based on a patch suggested by Samuel Thibault.
    Closes: #524666.
  * Update copyright for 2009.

 -- Frans Pop <fjp@debian.org>  Tue, 28 Apr 2009 18:13:46 +0200

installation-guide (20090427) unstable; urgency=low

  [ Colin Watson ]
  * Document partman/early_command (added in partman-base 129).
  * Add note about preseeding ownership to preseed-seenflag section, since I
    had a user confused by this who hadn't found the note elsewhere
    explaining owners.
  * Use /dev/sda and /dev/sdb in the RAID preseeding example rather than
    /dev/discs/disc0/disc and /dev/discs/disc1/disc, since the latter
    devices no longer exist.
  * Document noshell boot parameter. See #504381.
  * Clarify behaviour of "auto" preseed alias.
  * Clarify that preseeding aliases are only aliases for question names, and
    that a value is always needed as well.
  * Apparently you can pass extra boot parameters to OpenBoot at the end of
    the 'boot' command. Document this as it has been known to cause some
    confusion.

  [ Frans Pop ]
  * Document preseeding of network-console now that its postinst can be
    relied on to be executed.
  * Update info on passing boot parameter for PPPoE.
  * Explain Standard system task.
  * Add LXDE desktop environment.
  * Mention option to select desktop environment from boot menu for x86 CDs.
  * Add task sizes for alternative desktop environments.
  * chroot install: 'tzconfig' is deprecated for 'dpkg-reconfigure tzdata'.
    Closes: #520582.