@@ -274,6 +274,10 @@
 
 <!ENTITY url-arm-cyrius-qnap "http://www.cyrius.com/debian/orion/qnap/">
 
+<!ENTITY url-arm-cyrius-sheevaplug "http://www.cyrius.com/debian/kirkwood/sheevaplug/">
+
+<!ENTITY url-arm-cyrius-qnap-kirkwood "http://www.cyrius.com/debian/kirkwood/qnap/">
+
 <!-- ******************************************  sparc links -->
 <!--
   http://www.netbsd.org/Documentation/network/netboot/index.html -
