@@ -64,23 +64,21 @@ variations of each architecture known as <quote>flavors</quote>.
 
 <row>
   <entry morerows="4">ARM</entry>
-  <entry>arm</entry>
-  <entry>Netwinder and CATS</entry>
-  <entry>netwinder</entry>
-</row><row>
-  <entry>armel</entry>
-  <entry>Versatile</entry>
-  <entry>versatile</entry>
-</row><row>
-  <entry morerows="2">arm and armel</entry>
+  <entry morerows="4">armel</entry>
   <entry>Intel IOP32x</entry>
   <entry>iop32x</entry>
 </row><row>
   <entry>Intel IXP4xx</entry>
   <entry>ixp4xx</entry>
 </row><row>
+  <entry>Marvell Kirkwood</entry>
+  <entry>kirkwood</entry>
+</row><row>
   <entry>Marvell Orion</entry>
   <entry>orion5x</entry>
+</row><row>
+  <entry>Versatile</entry>
+  <entry>versatile</entry>
 </row>
 
 <row>
