@@ -28,20 +28,6 @@ The supported platforms are:
 <variablelist>
 
 <varlistentry>
-<term>Netwinder</term>
-<listitem><para>
-
-This is actually the name for the group of machines
-based upon the StrongARM 110 CPU and Intel 21285 Northbridge (also known
-as Footbridge). It
-comprises of machines like: Netwinder (possibly one of the most common ARM
-boxes), CATS (also known as the EB110ATX), EBSA 285 and Compaq
-personal server (cps, aka skiff).
-
-</para></listitem>
-</varlistentry>
-
-<varlistentry>
 <term>IOP32x</term>
 <listitem><para>
 
@@ -66,6 +52,20 @@ device which allows you to easily provide storage via the network.  It
 comes with an Ethernet connection and two USB ports to which hard drives
 can be connected.  There is an external site with <ulink
 url="&url-arm-cyrius-nslu2;">installation instructions</ulink>.
+
+</para></listitem>
+</varlistentry>
+
+<varlistentry>
+<term>Kirkwood</term>
+<listitem><para>
+
+Kirkwood is a system on a chip (SoC) from Marvell that integrates an ARM
+CPU, Ethernet, SATA, USB, and other functionality in one chip.  We
+currently support the following Kirkwood based devices: <ulink
+url="&url-arm-cyrius-sheevaplug;">SheevaPlug</ulink> and <ulink
+url="&url-arm-cyrius-qnap-kirkwood;">QNAP Turbo Station</ulink> (TS-119 and
+TS-219).
 
 </para></listitem>
 </varlistentry>
