@@ -2,26 +2,6 @@
 <!-- $Id$ -->
 
 
-   <sect3 arch="arm" id="netwinder-install-files">
-   <title>Netwinder Installation Files</title>
-<para>
-
-The easiest way to boot a Netwinder is over the network, using the
-supplied TFTP image &netwinder-boot-img;.
-
-</para>
-   </sect3>
-
-   <sect3 arch="arm" id="cats-install-files">
-   <title>CATS Installation Files</title>
-<para>
-
-CATS can be booted either via the network or from CD-ROM.  The kernel and
-initrd can be obtained from &cats-boot-img;.
-
-</para>
-   </sect3>
-
    <sect3 arch="arm" id="nslu2-install-files">
    <title>NSLU2 Installation Files</title>
 <para>
